# pbr

./: .gitignore  CMakeLists.txt  main.cpp  ppm_view.py
scenes/: 07-scene-easy.gltf  07-scene-medium-1.gltf  07-scene-medium-2.gltf  test.glft
src/: brdf.cpp  brdf.h  bvh.cpp  bvh.h  concurrency.h  gltf.cpp  gltf.h  matrix.h  scene.cpp  scene.h  utils.cpp  utils.h  vector.h
